--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.1",
     "antd": "^5.5.1",
     "firebase": "^9.22.1",
+    "rc-align": "^4.0.15",
+    "rc-motion": "^2.7.3",
+    "rc-resize-observer": "^1.3.1",
+    "rc-trigger": "^5.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
@@ -22,6 +27,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
     "typescript": "^4.4.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
