--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/chartjs": "^0.0.31",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
@@ -15,12 +17,14 @@
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.1",
     "antd": "^5.5.1",
+    "chart.js": "^4.3.0",
     "firebase": "^9.22.1",
     "rc-align": "^4.0.15",
     "rc-motion": "^2.7.3",
     "rc-resize-observer": "^1.3.1",
     "rc-trigger": "^5.3.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.7",
