--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/chartjs": "^0.0.31",
     "@types/jest": "^27.0.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -19,6 +20,7 @@
     "antd": "^5.5.1",
     "chart.js": "^4.3.0",
     "firebase": "^9.22.1",
+    "moment": "^2.29.4",
     "rc-align": "^4.0.15",
     "rc-motion": "^2.7.3",
     "rc-resize-observer": "^1.3.1",
